logs/watchdog_20251011_1545.log
[11/10/2025 15:45:02,41] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[11/10/2025 15:45:02,68] END WATCHDOG 
